--- a/index.html
+++ b/index.html
@@ -3,42 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUZZOCORP - Streetwear & Sneakers</title>
+    <title>GUZZOCORP - THE BEST STYLE</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome para íconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <div class="logo neon-accent">GUZZOCORP</div>
+        <div class="logo-container">
+            <img src="assets/logo-guzzocorp.png" alt="GUZZOCORP" class="logo">
+            <span class="logo-text neon-accent">THE BEST STYLE</span>
+        </div>
         <nav>
-            <a href="#inicio">Inicio</a>
-            <a href="#sneakers">Sneakers</a>
-            <a href="#ropa">Ropa</a>
-            <a href="#encargos">Encargos</a>
-            <a href="#contacto">Contacto</a>
+            <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
+            <a href="#sneakers"><i class="fas fa-shoe-prints"></i> Sneakers</a>
+            <a href="#ropa"><i class="fas fa-tshirt"></i> Ropa</a>
+            <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>THE BEST STYLE</h1>
-        <p class="neon-accent">Solamente vendemos pares originales</p>
-        <a href="#sneakers" class="cta-button">Toca acá para ver zapatillas</a>
+        <h1>STREETWEAR & SNEAKERS</h1>
+        <p class="neon-accent">Ediciones limitadas • Auténticos • Envíos nacionales</p>
+        <a href="#productos" class="cta-button">Ver colección</a>
     </section>
 
-    <section class="featured">
-        <h2 class="red-accent">ESSENTIALS</h2>
-        <div class="essentials-grid">
-            <div class="essentials-card">
-                <h3>CLOCHING</h3>
-                <p>Colección premium</p>
-                <a href="#ropa" class="cta-button">Ver ropa</a>
+    <section id="productos" class="products">
+        <h2 class="red-accent">PRODUCTOS DESTACADOS</h2>
+        
+        <div class="product-grid">
+            <!-- Producto 1 -->
+            <div class="product-card">
+                <img src="assets/product1.jpg" alt="Zapatillas modelo X">
+                <h3>Zallas Chantry's</h3>
+                <p class="price">$120.000</p>
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Zallas Chantry's', 120000)">
+                    <i class="fab fa-whatsapp"></i> Comprar por WhatsApp
+                </button>
             </div>
             
-            <div class="essentials-card">
-                <h3>Zallas Chantry's</h3>
-                <p>Edición limitada</p>
-                <a href="#sneakers" class="cta-button">Ver sneakers</a>
+            <!-- Producto 2 -->
+            <div class="product-card">
+                <img src="assets/product2.jpg" alt="Cofa vintage">
+                <h3>Cofa Vintage</h3>
+                <p class="price">$85.000</p>
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Cofa Vintage', 85000)">
+                    <i class="fab fa-whatsapp"></i> Comprar por WhatsApp
+                </button>
             </div>
         </div>
     </section>
+
+    <section id="contacto" class="contact">
+        <h2 class="neon-accent">CONTACTO</h2>
+        <div class="contact-methods">
+            <a href="https://wa.me/5491112345678" class="contact-btn whatsapp">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <a href="https://www.instagram.com/guzzocorp" class="contact-btn instagram">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+        </div>
+    </section>
+
+    <script>
+        function buyViaWhatsapp(productName, price) {
+            const phoneNumber = "5491112345678"; // Reemplaza con tu número
+            const message = `Hola GUZZOCORP! Quiero comprar: ${productName} - $${price}`;
+            window.open(`https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`, '_blank');
+        }
+    </script>
 </body>
 </html>
