--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header>
         <div class="logo-container">
-            <img src="assets/logo-guzzocorp.png" alt="GUZZOCORP" class="logo">
+            <img src="assets/logo-GuzzoCorp.png" alt="GUZZOCORP" class="logo">
             <span class="logo-text">THE BEST STYLE</span>
         </div>
         <nav>
