--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="GuzzoCorp.png">
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="logo-container">
-            <img src="./GuzzoCorp.png" alt="GUZZOCORP" class="logo">
+            <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
             <span class="logo-text">THE BEST STYLE</span>
         </div>
         <nav>
