--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logo-container">
-            <img src="assets/logo-guzzocorp.png" alt="GUZZOCORP" class="footer-logo">
+            <img src="GuzzoCorp.png" alt="GUZZOCORP" class="footer-logo">
             <span class="footer-logo-text">THE BEST STYLE</span>
         </div>
         <div class="footer-links">
