--- a/index.html
+++ b/index.html
@@ -226,23 +226,22 @@
     </section>
 
     <!-- Sección Contacto -->
-    <section id="contacto" class="contact">
-        <h2 class="section-title">CONTACTO <span class="neon-accent">GUZZOCORP</span></h2>
-        <p class="contact-description">¿Preguntas? Contactanos directamente por estos medios:</p>
-        
-        <div class="contact-methods">
-            <a href="https://wa.me/5492664633010" class="contact-btn whatsapp">
-                <i class="fab fa-whatsapp"></i> WhatsApp
-            </a>
-            <a href="https://www.instagram.com/guzzo.corp" class="contact-btn instagram">
-                <i class="fab fa-instagram"></i> Instagram
-            </a>
-            <a href="mailto:contacto@guzzocorp.com.ar" class="contact-btn email">
-                <i class="fas fa-envelope"></i> Email
-            </a>
-        </div>
-    </section>
-
+<section id="contacto" class="contact">
+    <h2 class="section-title centered-title">CONTACTO <span class="neon-accent">GUZZO.CORPORATION</span></h2>
+    <p class="contact-description">¿Preguntas? Contactanos directamente por estos medios:</p>
+    
+    <div class="contact-methods">
+        <a href="https://wa.me/5492664633010" class="contact-btn whatsapp">
+            <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+        <a href="https://www.instagram.com/guzzo.corp" class="contact-btn instagram">
+            <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="mailto:contacto@guzzocorp.com.ar" class="contact-btn email">
+            <i class="fas fa-envelope"></i> Email
+        </a>
+    </div>
+</section>
     <!-- Footer -->
     <footer>
         <div class="footer-logo-container">
@@ -261,7 +260,7 @@
             <a href="https://wa.me/5492664633010" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="copyright">
-            &copy; 2023 GUZZOCORP - Todos los derechos reservados
+            &copy; 2025 GUZZOCORP - Todos los derechos reservados
         </div>
     </footer>
 
