--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUZZOCORP - THE BEST STYLE | Streetwear & Sneakers</title>
+    <title>GUZZOCORP - Lo Mejor Para Vos</title>
     <meta name="description" content="Venta de sneakers y streetwear de edición limitada. Productos 100% originales.">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -21,7 +21,7 @@
         </div>
         <nav>
             <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
-            <a href="#sneakers"><i class="fas fa-shoe-prints"></i> Sneakers</a>
+            <a href="#sneakers"><i class="fas fa-shoe-prints"></i> Zapatillas</a>
             <a href="#ropa"><i class="fas fa-tshirt"></i> Ropa</a>
             <a href="#encargos"><i class="fas fa-star"></i> Encargos</a>
             <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
@@ -34,8 +34,8 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="hero-content">
-            <h1>STREETWEAR <span class="neon-accent">EXCLUSIVO</span></h1>
-            <p class="neon-accent text-glow">Ediciones limitadas • Auténticos • Envíos a todo el país</p>
+            <h1>PRENDAS <span class="neon-accent">EXCLUSIVAS</span></h1>
+            <p class="neon-accent text-glow">Ediciones limitadas • Auténticos • Envíos a todo el país  • Barato y de Calidad</p>
             <a href="#productos" class="cta-button">VER COLECCIÓN</a>
         </div>
     </section>
