--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo-container">
             <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
-            <span class="logo-text">THE BEST STYLE</span>
+            <span class="logo-text">GUZZO CORPORATION</span>
         </div>
         <nav>
             <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
