--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="product-info">
                 <h3>Buzo Canguro Negro</h3>
                 <p class="price">$25.000</p>
-                <p class="size">Estampado y Bordado a elección</p>
+                <p class="size">Estampado</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
                 <button class="whatsapp-btn" onclick="buyViaWhatsapp('Buzo Canguro Negro - Estampado a elección (Más vendido)', 25000, 'https://guzzocorp.com.ar/assets/products/buzo-canguro-negro.jpg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
@@ -226,7 +226,7 @@
     <section id="encargos" class="special-orders">
         <div class="orders-container">
             <h2 class="section-title neon-accent">ENCARGOS <span class="red-accent">ESPECIALES</span></h2>
-            <p class="orders-description">¿Buscas un modelo específico? Contamos con servicio de encargos internacionales.</p>
+            <p class="orders-description">¿Buscas un modelo específico? ¿En que podemos mejorar? Es importantisima para nosotros tu opinion y peticiones!</p>
             
             <form id="order-form" class="contact-form">
                 <div class="form-group">
