--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
                     <input type="text" id="name" name="name" placeholder="Tu nombre" required>
                 </div>
                 <div class="form-group">
-                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <input type="email" id="email" name="email" placeholder="Email o Numero de Telefono" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="model" name="model" placeholder="Modelo que buscas" required>
+                    <input type="text" id="model" name="model" placeholder="Modelo que buscas o la Sugerencia" required>
                 </div>
                 <div class="form-group">
-                    <textarea id="details" name="details" placeholder="Detalles (talle, color, etc.)" rows="4" required></textarea>
+                    <textarea id="details" name="details" placeholder="Detalles (talle, color, etc o que podriamos mejorar, etc.)" rows="4" required></textarea>
                 </div>
                 <button type="button" onclick="submitOrderForm()" class="cta-button full-width-btn">
                     <i class="fas fa-paper-plane"></i> ENVIAR CONSULTA
