--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <section id="encargos" class="special-orders">
         <div class="orders-container">
             <h2 class="section-title neon-accent">ENCARGOS <span class="red-accent">ESPECIALES</span></h2>
-            <p class="orders-description">¿Buscas un modelo específico? ¿En que podemos mejorar? Es importantisima para nosotros tu opinion y peticiones!</p>
+            <p class="orders-description">¿Buscas un modelo específico? ¿Podemos mejorar en algo? Es importantisima para nosotros tu opinion y peticiones!</p>
             
             <form id="order-form" class="contact-form">
                 <div class="form-group">
