--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <a href="https://wa.me/5492664633010" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="copyright">
-            &copy; 2025 GUZZOCORP - Todos los derechos reservados
+            &copy; 2025 GUZZOCORP - Todos los derechos reservados - By: Nahuel Guzzo
         </div>
     </footer>
 
