--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <textarea id="details" name="details" placeholder="Detalles (talle, color, etc o que podriamos mejorar, etc.)" rows="4" required></textarea>
                 </div>
                 <button type="button" onclick="submitOrderForm()" class="cta-button full-width-btn">
-                    <i class="fas fa-paper-plane"></i> ENVIAR CONSULTA
+                    <i class="fas fa-paper-plane"></i> ENVIARR!
                 </button>
             </form>
         </div>
