--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <div class="logo-container">
+<header>
+    <div class="logo-container">
+        <a href="#inicio" class="logo-link">
             <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
             <span class="logo-text">GUZZO CORPORATION</span>
-        </div>
-        <nav>
-            <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
-            <a href="#sneakers"><i class="fas fa-shoe-prints"></i> Zapatillas</a>
-            <a href="#ropa"><i class="fas fa-tshirt"></i> Ropa</a>
-            <a href="#encargos"><i class="fas fa-star"></i> Encargos</a>
-            <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
-        </nav>
-        <div class="mobile-menu-btn">
-            <i class="fas fa-bars"></i>
-        </div>
-    </header>
+        </a>
+    </div>
+    <nav>
+        <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
+        <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
+        <a href="#encargos"><i class="fas fa-star"></i> Encargos</a>
+        <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
+    </nav>
+    <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+</header>
 
     <!-- Hero Section -->
     <section id="inicio" class="hero">
