--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link rel="icon" type="image/png" href="GuzzoCorp.png">
 </head>
 <body>
-    <!-- Header -->
+<!-- Header -->
 <header>
     <div class="logo-container">
-            <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
-            <span class="logo-text">GUZZO CORPORATION</span>
+        <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
+        <span class="logo-text">GUZZO CORPORATION</span>
     </div>
     <nav>
-        <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
+        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
         <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
         <a href="#encargos"><i class="fas fa-star"></i> Encargos</a>
         <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
