--- a/catalogo.html
+++ b/catalogo.html
@@ -96,6 +96,8 @@
         <div class="social-links">
             <a href="https://www.instagram.com/guzzo.corp" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/5492664633010" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="mailto:guzzoinbusiness@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+
         </div>
         <div class="copyright">
             &copy; 2025 GUZZOCORP - Todos los derechos reservados - By: Nahuel Guzzo
