--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="logo-text">GUZZO CORPORATION</span>
     </div>
     <nav>
-        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
+        <a href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
         <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
         <a href="#encargos"><i class="fas fa-star"></i> Encargos</a>
         <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
