--- a/inicio.html
+++ b/inicio.html
@@ -159,7 +159,7 @@
                 <i class="fab fa-bitcoin"></i>
             </div>
             <h3>CRIPTOMONEDAS</h3>
-            <p>Aceptamos Bitcoin y USDT</p>
+            <p>Aceptamos Bitcoin, USDT, la mayoria de criptomonedas</p>
         </div>
     </div>
     
@@ -214,7 +214,7 @@
     <footer>
         <div class="footer-logo-container">
             <img src="GuzzoCorp.png" alt="GUZZOCORP" class="footer-logo">
-            <span class="footer-logo-text">TRANSFORMANDO ESTILO Y NEGOCIOS</span>
+            <span class="footer-logo-text">LA SOLUCIÓN A TUS PROBLEMAS</span>
         </div>
         <div class="footer-links">
             <a href="inicio.html">Inicio</a>
