--- a/inicio.html
+++ b/inicio.html
@@ -53,7 +53,7 @@
                     <i class="fas fa-tshirt"></i>
                 </div>
                 <h3>ROPA Y STREETWEAR</h3>
-                <p>La base de nuestro imperio. Ofrecemos prendas exclusivas, ediciones limitadas y calidad premium para los amantes del streetwear.</p>
+                <p>La base de nuestra empresa. Ofrecemos prendas exclusivas, ediciones limitadas y calidad premium para los amantes del streetwear.</p>
                 <ul class="pillar-features">
                     <li><i class="fas fa-check"></i> Prendas exclusivas y limitadas</li>
                     <li><i class="fas fa-check"></i> Calidad premium garantizada</li>
