--- a/inicio.html
+++ b/inicio.html
@@ -104,7 +104,7 @@
             <div class="about-content">
                 <h2 class="section-title">QUIÉNES <span class="neon-accent">SOMOS</span></h2>
                 <p>GUZZO CORPORATION nació como un sueño de combinar moda, educación financiera y servicios técnicos bajo una misma marca que representa excelencia y confianza.</p>
-                <p>Fundada por Nahuel Guzzo, nuestra empresa ha crecido manteniendo los valores de calidad, innovación y compromiso con nuestros clientes.</p>
+                <p>Fundada por Nahuel Guzzo, la meta es crecer manteniendo los valores de calidad, innovación y compromiso con nuestros clientes.</p>
                 <div class="about-mission">
                     <h4><i class="fas fa-bullseye"></i> NUESTRA MISIÓN</h4>
                     <p>Ofrecer productos y servicios que mejoren la vida de nuestros clientes, mientras les enseñamos a generar riqueza y mantener sus dispositivos en perfecto estado.</p>
