--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     </div>
     <nav>
         <a href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+        <a href="index.html"><i class="fas fa-tshirt"></i> Tienda</a>
         <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
-        <a href="#encargos"><i class="fas fa-star"></i> Encargos</a>
+        <a href="encargos.html"><i class="fas fa-star"></i> Encargos</a>
         <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
     </nav>
     <div class="mobile-menu-btn">
