--- a/inicio.html
+++ b/inicio.html
@@ -214,21 +214,21 @@
                 <i class="fas fa-tshirt"></i>
                 <h4>ROPA Y STREETWEAR</h4>
                 <p>Consultas sobre productos y pedidos</p>
-                <a href="mailto:ropa@guzzoinbusiness@gmail.com">ropa@guzzoinbusiness@gmail.com</a>
+                <a href="mailto:ropa@guzzoinbusiness@gmail.com">guzzoinbusiness@gmail.com</a>
             </div>
             
             <div class="info-card">
                 <i class="fas fa-chart-line"></i>
                 <h4>EDUCACIÓN FINANCIERA</h4>
                 <p>Información sobre cursos y revendedores</p>
-                <a href="mailto:finanzas@guzzoinbusiness@gmail.com">finanzas@guzzoinbusiness@gmail.com</a>
+                <a href="mailto:finanzas@guzzoinbusiness@gmail.com">guzzoinbusiness@gmail.com</a>
             </div>
             
             <div class="info-card">
                 <i class="fas fa-tools"></i>
                 <h4>REPARACIONES TÉCNICAS</h4>
                 <p>Solicitud de servicios técnicos</p>
-                <a href="mailto:reparaciones@guzzoinbusiness@gmail.com">reparaciones@guzzoinbusiness@gmail.com</a>
+                <a href="mailto:reparaciones@guzzoinbusiness@gmail.com">guzzoinbusiness@gmail.com</a>
             </div>
         </div>
     </section>
