--- a/finanzas.html
+++ b/finanzas.html
@@ -51,7 +51,7 @@
                     <i class="fas fa-tshirt"></i>
                 </div>
                 <h3>Programa Revendedor</h3>
-                <p class="price">$15.000/mes</p>
+                <p class="price">$Contactate con nosotros</p>
                 <ul>
                     <li><i class="fas fa-check"></i> Acceso a precios mayoristas</li>
                     <li><i class="fas fa-check"></i> Guía de ventas paso a paso</li>
@@ -65,9 +65,9 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
                 <h3>Curso de Inversiones</h3>
-                <p class="price">$25.000</p>
+                <p class="price">$5.999 por clase</p>
                 <ul>
-                    <li><i class="fas fa-check"></i> Mercado de capitales</li>
+                    <li><i class="fas fa-check"></i> Mercado de Bonos</li>
                     <li><i class="fas fa-check"></i> Criptomonedas</li>
                     <li><i class="fas fa-check"></i> Estrategias comprobadas</li>
                 </ul>
@@ -79,7 +79,7 @@
                     <i class="fas fa-handshake"></i>
                 </div>
                 <h3>Asesoría Premium</h3>
-                <p class="price">$50.000/mes</p>
+                <p class="price">15% sobre las ganancias aproximadamente</p>
                 <ul>
                     <li><i class="fas fa-check"></i> Plan personalizado</li>
                     <li><i class="fas fa-check"></i> Reuniones semanales</li>
@@ -100,13 +100,13 @@
         <div class="testimonials-grid">
             <div class="testimonial-card">
                 <div class="testimonial-content">
-                    <p>"Con el programa de revendedor multipliqué mi inversión inicial por 5 en solo 3 meses."</p>
+                    <p>"Gracias al curso de inversiones, ahora sé cómo hacer que mi plata trabaje por mí."</p>
                 </div>
                 <div class="testimonial-author">
                     <img src="assets/testimonials/user1.jpg" alt="Martina R.">
                     <div>
-                        <h4>Martina R.</h4>
-                        <p>Revendedora desde 2023</p>
+                        <h4>Tiziano G.</h4>
+                        <p>Asesoría Premium y Alumno del curso</p>
                     </div>
                 </div>
             </div>
@@ -118,8 +118,8 @@
                 <div class="testimonial-author">
                     <img src="assets/testimonials/user2.jpg" alt="Lucas G.">
                     <div>
-                        <h4>Lucas G.</h4>
-                        <p>Alumno del curso</p>
+                        <h4>Santiago P.</h4>
+                        <p>Asesoría Premium y Alumno del curso</p>
                     </div>
                 </div>
             </div>
