--- a/finanzas.html
+++ b/finanzas.html
@@ -51,7 +51,7 @@
                     <i class="fas fa-tshirt"></i>
                 </div>
                 <h3>Programa Revendedor</h3>
-                <p class="price">$Contactate con nosotros</p>
+                <p class="price">Contactate con nosotross!</p>
                 <ul>
                     <li><i class="fas fa-check"></i> Acceso a precios mayoristas</li>
                     <li><i class="fas fa-check"></i> Guía de ventas paso a paso</li>
