--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
    <!-- Ofertas Únicas -->
 <section id="ofertas" class="products">
-    <h2 class="section-title blue-accent">OFERTAS <span class="text-light">ÚNICAS</span></h2>
+    <h2 class="section-title"><span class="blue-accent">OFERTAS</span> <span class="text-light">ÚNICAS</span></h2>
     
     <div class="product-grid">
         <!-- Producto 1 -->
@@ -106,7 +106,7 @@
 
     <!-- Sección Sneakers -->
 <section id="sneakers" class="products">
-    <h2 class="section-title blue-accent">SNEAKERS <span class="text-light">EXCLUSIVOS</span></h2>
+    <h2 class="section-title"><span class="blue-accent">SNEAKERS</span> <span class="text-light">EXCLUSIVOS</span></h2>
     
     <div class="product-grid">
         <!-- Producto 4 - DC Court Graffick -->
@@ -167,7 +167,7 @@
 
     <!-- Sección Ropa -->
 <section id="ropa" class="products">
-   <h2 class="section-title blue-accent">STREETWEAR <span class="text-light">COLLECTION</span></h2>
+   <h2 class="section-title"><span class="blue-accent">STREETWEAR</span> <span class="text-light">COLLECTION</span></h2>
     <div class="product-grid">
         <!-- Producto 1 - Remera Oversize Negra -->
         <div class="product-card">
