--- a/index.html
+++ b/index.html
@@ -238,6 +238,43 @@
         </a>
     </div>
 </section>
+
+<!-- Métodos de Pago -->
+<section class="payment-methods">
+    <div class="section-header" style="text-align:center;">
+        <h2 class="section-title">MÉTODOS DE <span class="neon-accent">PAGO</span></h2>
+        <p class="section-subtitle">Transacciones seguras y sin complicaciones</p>
+    </div>
+
+    <div class="payments-grid">
+        <div class="payment-card">
+            <i class="fas fa-money-bill-wave"></i>
+            <h3>EFECTIVO</h3>
+            <p>Con descuento especial</p>
+        </div>
+        <div class="payment-card">
+            <i class="fas fa-university"></i>
+            <h3>TRANSFERENCIA</h3>
+            <p>Banco o Mercado Pago</p>
+        </div>
+        <div class="payment-card">
+            <i class="fab fa-cc-visa"></i>
+            <h3>TARJETAS DÉBITO</h3>
+            <p>Visa y Mastercard</p>
+        </div>
+        <div class="payment-card">
+            <i class="fab fa-bitcoin"></i>
+            <h3>CRIPTOMONEDAS</h3>
+            <p>Bitcoin, USDT, más</p>
+        </div>
+    </div>
+
+    <div class="payment-notice">
+        <i class="fas fa-info-circle"></i>
+        <p><strong>Política clara:</strong> No aceptamos cuotas ni crédito.</p>
+    </div>
+</section>
+    
    <!-- Footer -->
 <footer>
     <div class="footer-logo-container">
