--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 </section>
 
 <!-- Métodos de Pago -->
-<section class="payment-methods">
+<section class="payment-methods" style="margin-bottom: 5rem;">
     <div class="section-header" style="text-align:center;">
         <h2 class="section-title">MÉTODOS DE <span class="neon-accent">PAGO</span></h2>
         <p class="section-subtitle">Transacciones seguras y sin complicaciones</p>
