--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 </section>
 
 <!-- Sección Contacto -->
-<section id="contacto" class="contact">
+<section id="contacto" class="contact" style="margin-bottom: 5rem;">> 
+
     <h2 class="section-title centered-title">CONTACTO <span class="neon-accent">GUZZO.CORPORATION</span></h2>
     <p class="contact-description">¿Preguntas? Contactanos directamente por estos medios:</p>
     
