--- a/inicio.html
+++ b/inicio.html
@@ -124,7 +124,7 @@
 </section>
 
 <!-- Contacto -->
-<section id="contacto" class="contact">
+<section id="contacto" class="contact" style="margin-bottom: 5rem;">
     <h2 class="section-title centered-title">CONTACTO <span class="neon-accent">GUZZO.CORPORATION</span></h2>
     <p class="contact-description">¿Listo para comenzar? Contáctanos:</p>
 
