--- a/encargos.html
+++ b/encargos.html
@@ -507,7 +507,7 @@ document.getElementById('order-form').addEventListener('submit', function(e) {
 </script>
 
     <!-- Ejemplos de Encargos -->
-    <section class="examples">
+    <section class="examples" style="margin-bottom: 5rem;">
         <div class="section-header">
             <h2 class="section-title">ENCARGOS <span class="neon-accent">RECIENTES</span></h2>
             <p class="section-subtitle">Algunos ejemplos de lo que hemos creado para nuestros clientes</p>
@@ -532,8 +532,44 @@ document.getElementById('order-form').addEventListener('submit', function(e) {
         </div>
     </section>
 
+<!-- Métodos de Pago -->
+<section class="payment-methods" style="margin-bottom: 5rem;">
+    <div class="section-header" style="text-align:center;">
+        <h2 class="section-title">MÉTODOS DE <span class="neon-accent">PAGO</span></h2>
+        <p class="section-subtitle">Transacciones seguras y sin complicaciones</p>
+    </div>
+
+    <div class="payments-grid">
+        <div class="payment-card">
+            <i class="fas fa-money-bill-wave"></i>
+            <h3>EFECTIVO</h3>
+            <p>Con descuento especial</p>
+        </div>
+        <div class="payment-card">
+            <i class="fas fa-university"></i>
+            <h3>TRANSFERENCIA</h3>
+            <p>Banco o Mercado Pago</p>
+        </div>
+        <div class="payment-card">
+            <i class="fab fa-cc-visa"></i>
+            <h3>TARJETAS DÉBITO</h3>
+            <p>Visa y Mastercard</p>
+        </div>
+        <div class="payment-card">
+            <i class="fab fa-bitcoin"></i>
+            <h3>CRIPTOMONEDAS</h3>
+            <p>Bitcoin, USDT, más</p>
+        </div>
+    </div>
+
+    <div class="payment-notice">
+        <i class="fas fa-info-circle"></i>
+        <p><strong>Política clara:</strong> No aceptamos cuotas ni crédito.</p>
+    </div>
+</section>
+    
     <!-- Sección Contacto -->
-    <section id="contacto" class="contact">
+    <section id="contacto" class="contact" style="margin-bottom: 5rem;">
         <h2 class="section-title centered-title">CONTACTO <span class="neon-accent">GUZZO.CORPORATION</span></h2>
         <p class="contact-description">¿Tienes dudas sobre encargos? Contáctanos directamente:</p>
         
