--- a/encargos.html
+++ b/encargos.html
@@ -44,7 +44,7 @@
     <div class="custom-orders-container">
         <div class="orders-header">
             <h2 class="section-title"><span class="blue-accent">ENCARGOS</span> <span class="text-light">ESPECIALES</span></h2>
-            <p class="orders-subtitle">¿Buscas algo específico? ¡Diseñémoslo juntos!</p>
+            <p class="orders-subtitle">¿Querés algo que no esté en la página o tenés una idea única? Hacemos productos personalizados a tu medida. Contanos qué querés y lo diseñamos juntos. Además, por confiar en nosotros y ayudarnos a innovar, te damos un 5% a 10% de descuento según la complejidad del pedido.</p>
         </div>
         
         <form id="order-form" class="custom-order-form" enctype="multipart/form-data">
