--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <span class="tag-exclusive">EXCLUSIVO</span>
             <span class="tag-stock">ÚLTIMA UNIDAD</span>
             <div class="product-image-container">
-                <img src="assets/products/dc-court-graffick.jpg" alt="DC Court Graffick Rosas" class="product-image">
+                <img src="dc-rosas.jpeg" alt="DC Court Graffick Rosas" class="product-image">
             </div>
             <div class="product-info">
                 <h3>DC Court Graffick Rosas</h3>
@@ -132,7 +132,7 @@
             <span class="tag-original">ORIGINAL</span>
             <span class="tag-stock">ÚLTIMA UNIDAD</span>
             <div class="product-image-container">
-                <img src="assets/products/puma-180.jpg" alt="Puma 180" class="product-image">
+                <img src="puma-180.jpeg" alt="Puma 180" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Puma 180</h3>
@@ -150,7 +150,7 @@
             <span class="tag-collector">COLECCIONISTA</span>
             <span class="tag-stock">ÚLTIMA UNIDAD</span>
             <div class="product-image-container">
-                <img src="assets/products/osiris-d3.jpg" alt="Osiris D3 2001" class="product-image">
+                <img src="osiris-d3.jpeg" alt="Osiris D3 2001" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Osiris D3 2001</h3>
