--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="assets/products/remera-termica.jpg" alt="Remera Térmica" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Remera Térmica</h3>
+                <h3>Remera Térmica Manga Corta</h3>
                 <div class="price-container">
                     <p class="old-price">$20.000</p>
                     <p class="price">$14.999</p>
