--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <img src="assets/products/cuellito-lycra.jpg" alt="Cuellitos de Lycra Frizada" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Cuellitos Lycra Frizada</h3>
+                <h3>Cuellos de Lycra Frizada</h3>
                 <div class="price-container">
                     <p class="old-price">$5.000</p>
                     <p class="price">$3.999</p>
