--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
     <div class="product-grid">
         <!-- Producto 4 - DC Court Graffick -->
         <div class="product-card">
-            <span class="tag-exclusive">EXCLUSIVO</span>
             <span class="tag-stock">ÚLTIMA UNIDAD</span>
             <div class="product-image-container">
                 <img src="dc-rosas.jpeg" alt="DC Court Graffick Rosas" class="product-image">
@@ -119,9 +118,9 @@
             <div class="product-info">
                 <h3>DC Court Graffick Rosas</h3>
                 <p class="price">$199.999</p>
-                <p class="size">Las únicas de San Luis</p>
+                <p class="size">Las únicas de San Luis - Originales</p>
                 <p class="stock-warning">¡Solo queda 1 en stock!</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('DC Court Graffick Rosas - Exclusivas San Luis (Última unidad)', 199999, 'https://guzzocorp.com.ar/assets/products/dc-court-graffick.jpg')">
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('DC Court Graffick Rosas - Exclusivas San Luis (Última unidad)', 199999, 'https://guzzocorp.com.ar/assets/products/dc-rosas.jpeg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
@@ -129,7 +128,6 @@
         
         <!-- Producto 5 - Puma 180 -->
         <div class="product-card">
-            <span class="tag-original">ORIGINAL</span>
             <span class="tag-stock">ÚLTIMA UNIDAD</span>
             <div class="product-image-container">
                 <img src="puma-180.jpeg" alt="Puma 180" class="product-image">
@@ -137,9 +135,9 @@
             <div class="product-info">
                 <h3>Puma 180</h3>
                 <p class="price">$169.999</p>
-                <p class="size">Edición Super Exclusiva</p>
+                <p class="size">Originales</p>
                 <p class="stock-warning">¡Solo queda 1 en stock!</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Puma 180 - Originales Super Exclusivas (Última unidad)', 169999, 'https://guzzocorp.com.ar/assets/products/puma-180.jpg')">
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Puma 180 - Originales Super Exclusivas (Última unidad)', 169999, 'https://guzzocorp.com.ar/assets/products/puma-180.jpeg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
@@ -147,17 +145,16 @@
         
         <!-- Producto 6 - Osiris D3 2001 -->
         <div class="product-card">
-            <span class="tag-collector">COLECCIONISTA</span>
             <span class="tag-stock">ÚLTIMA UNIDAD</span>
             <div class="product-image-container">
-                <img src="osiris-d3.jpeg" alt="Osiris D3 2001" class="product-image">
+                <img src="dc-stag.jpeg" alt="Dc Stag" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Osiris D3 2001</h3>
-                <p class="price">$299.999</p>
-                <p class="size">Edición Super Exclusiva</p>
+                <h3>Dc Stag</h3>
+                <p class="price">$149.999</p>
+                <p class="size">Originales</p>
                 <p class="stock-warning">¡Solo queda 1 en stock!</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Osiris D3 2001 - Edición Coleccionista (Última unidad)', 299999, 'https://guzzocorp.com.ar/assets/products/osiris-d3.jpg')">
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('dc stag, 149999, 'https://guzzocorp.com.ar/assets/products/dc-stag.jpeg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
