--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="product-card">
             <span class="tag-discount">20% OFF</span>
             <div class="product-image-container">
-                <img src="assets/products/remera-termica.jpg" alt="Remera Térmica Manga Corta" class="product-image">
+                <img src="Termica.jpeg" alt="Remera Térmica Manga Corta" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Remera Térmica Manga Corta</h3>
@@ -58,7 +58,7 @@
                     <p class="price">$14.999</p>
                 </div>
                 <p class="size">Talles: S, M, L, XL</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Remera Térmica (20% OFF)', 15000, 'https://guzzocorp.com.ar/assets/products/remera-termica.jpg')">
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Remera Térmica (20% OFF)', 15000, 'https://guzzocorp.com.ar/Termica.jpeg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
@@ -68,16 +68,16 @@
         <div class="product-card">
             <span class="tag-discount">33% OFF</span>
             <div class="product-image-container">
-                <img src="assets/products/gorra-nba.jpg" alt="Gorra NBA" class="product-image">
+                <img src="Gorras.jpeg" alt="Gorra NBA" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Gorra NBA</h3>
                 <div class="price-container">
-                    <p class="old-price">$30.000</p>
-                    <p class="price">$19.999</p>
+                    <p class="old-price">$29.000</p>
+                    <p class="price">$18.999</p>
                 </div>
                 <p class="size">Ajustable</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Gorra NBA (33% OFF)', 20000, 'https://guzzocorp.com.ar/assets/products/gorra-nba.jpg')">
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Gorra NBA (33% OFF)', 20000, 'https://guzzocorp.com.ar/Gorras.jpeg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
