--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <div class="product-card">
             <span class="tag-discount">33% OFF</span>
             <div class="product-image-container">
-                <img src="Gorras.jpeg" alt="Gorra NBA" class="product-image">
+                <img src="Gorras.jpeg" alt="Gorra" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Gorra NBA</h3>
+                <h3>Gorra</h3>
                 <div class="price-container">
                     <p class="old-price">$29.000</p>
                     <p class="price">$18.999</p>
