--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p class="price">$18.999</p>
                 </div>
                 <p class="size">Ajustable</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Gorra NBA (33% OFF)', 20000, 'https://guzzocorp.com.ar/Gorras.jpeg')">
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Gorra (33% OFF)', 20000, 'https://guzzocorp.com.ar/Gorras.jpeg')">
                     <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
