--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="hero-content">
             <h1>PRENDAS <span class="neon-accent">EXCLUSIVAS</span></h1>
             <p class="neon-accent text-glow">Ediciones limitadas • Auténticos • Envíos a todo el país  • Barato y de Calidad</p>
-            <a href="catalogo.html"> class="cta-button">VER COLECCION</a>
+            <a href="catalogo.html"> class="cta-button">VER COLECCIÓN</a>
         </div>
     </section>
 
